Created a landing page and finished the lasagna recipe.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <h3>Our top recipes!</h2>
+    <ol>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="">Something yummy</a></li>
+        <li><a href="">Another good meal</a></li>
+        <li><a href="">One more placeholder</a></li>
+    </ol>
 </body>
 </html>
