Added a short description

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,6 +9,11 @@
     <h1>Lasagna Recipe</h1>
     <img src="../img/lasagna-img.jpg" alt="Lasagna" width="500px">
 
+    <h1>Description:</h1>
+    <p>Making lasagna can be time-consuming, but the results are well worth the wait. 
+       You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics</p>
+
+    <h1>Preparation:</h1>
     <h3>Prep Time:</h3>
     <p>30 mins</p>
     <h3>Cook Time:</h3>
