--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <h1>Odin Recipes</h1>
-    <h3>Our top recipes!</h2>
+    <h3>Our top recipes!</h3>
     <ol>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="">Something yummy</a></li>
         <li><a href="">Another good meal</a></li>
         <li><a href="">One more placeholder</a></li>
     </ol>
+</div>
 </body>
 </html>
