--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,51 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Lasagna Recipe</h1>
-    <img src="../img/lasagna-img.jpg" alt="Lasagna" width="500px">
+    <div class="container">
+        <h1>Lasagna Recipe</h1>
+        <img src="../img/lasagna-img.jpg" alt="Lasagna" width="500px">
 
-    <h1>Description:</h1>
-    <p>Making lasagna can be time-consuming, but the results are well worth the wait. 
-       You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics</p>
+        <h1>Description:</h1>
+        <p>Making lasagna can be time-consuming, but the results are well worth the wait. 
+        You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics</p>
 
-    <h1>Preparation:</h1>
-    <h3>Prep Time:</h3>
-    <p>30 mins</p>
-    <h3>Cook Time:</h3>
-    <p>2 hrs 30 mins</p>
-    <h3>Additional Time:</h3>
-    <p>15 mins</p>
-    <h3>Total Time:</h3>
-    <p>3 hrs 15 mins</p>
-    <h3>Servings:</h3>
-    <p>12</p>
+        <h1>Preparation:</h1>
+        <h3>Prep Time:</h3>
+        <p>30 mins</p>
+        <h3>Cook Time:</h3>
+        <p>2 hrs 30 mins</p>
+        <h3>Additional Time:</h3>
+        <p>15 mins</p>
+        <h3>Total Time:</h3>
+        <p>3 hrs 15 mins</p>
+        <h3>Servings:</h3>
+        <p>12</p>
 
-    <h1>Indredients:</h1>
-    <ul>
-        <li>Italian sausage and lean ground beef.</li>
-        <li>Onion and garlic</li>
-        <li>Can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
-        <li>Sugar</li>
-        <li>Spices and seasonings</li>
-        <li>Lasagna noodles</li>
-        <li>Cheeses</li>
-        <li>Egg</li>
-    </ul>
-    <h1>How to cook:</h1>
-    <ol>
-        <li>Make the meat sauce.</li>
-        <li>Cook the noodles.</li>
-        <li>Make the ricotta mixture.</li>
-        <li>Layer the lasagna according to the recipe instructions.</li>
-        <li>Cover with foil and bake.</li>
-        <li>Let the lasagna rest before serving.</li>
-    </ol>
-    <h1>How long to cook:</h1>
-    <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. 
-       Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. 
-       Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it. </p>
-    <p><a href="../index.html">Go Back?</a></p>
+        <h1>Indredients:</h1>
+        <ul>
+            <li>Italian sausage and lean ground beef.</li>
+            <li>Onion and garlic</li>
+            <li>Can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+            <li>Sugar</li>
+            <li>Spices and seasonings</li>
+            <li>Lasagna noodles</li>
+            <li>Cheeses</li>
+            <li>Egg</li>
+        </ul>
+        <h1>How to cook:</h1>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
+        <h1>How long to cook:</h1>
+        <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. 
+        Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. 
+        Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it. </p>
+        <p><a href="../index.html">Go Back?</a></p>
+    </div>
 </body>
 </html>
